--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -3,13 +3,8 @@
         <h1>Iniciar Sesión</h1>
         <div class="input-group">
             <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" formControlName="email" (input)="logIn()">
+            <input type="email" id="email" name="email" formControlName="email">
         </div>
-        @if (!verificaciones.emailVerification&& formulario.controls["email"].touched) {
-            <div class="error">
-                Ese email no esta asociado a ninguna cuenta
-            </div>
-        }
         @if (formulario.controls["email"].getError("required")&& formulario.controls["email"].touched) {
             <div class="error">
                 Campo requerido
@@ -22,16 +17,17 @@
         }
         <div class="input-group">
             <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" formControlName="password" (input)="logIn()">
+            <input type="password" id="password" name="password" formControlName="password">
         </div>
         @if (formulario.controls["password"].getError("required")&& formulario.controls["password"].touched) {
             <div class="error">
                 Campo requerido
             </div>
         }
-        @if (!verificaciones.passwordVerification&& formulario.controls["password"].touched) {
+        @if(!verificador)
+        {
             <div class="error">
-                Contraseña incorrecta
+                Acceso rechazado, verifique los datos
             </div>
         }
         <button type="submit" class="login-btn" (click)="onLogin()">Iniciar Sesión</button>
