--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -31,6 +31,6 @@
             </div>
         }
         <button type="submit" class="login-btn" (click)="onLogin()">Iniciar Sesión</button>
-        <p class="register-text">¿No tienes cuenta? <a href="#">Regístrate</a></p>
+        <p class="register-text">¿No tienes cuenta? <a routerLink="register">Regístrate</a></p>
     </form>
 </div>
