--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -34,8 +34,10 @@
                 @if (registerForm.get('email')?.invalid && registerForm.get('email')?.touched) {
                     <span class="error-message">Ingrese un email válido</span>
                 }
+                @if (verificadorMail) {
+                    <span class="error-message">El email ingresado ya está registrado</span>
+                }
             </div>
-
             <div class="form-group">
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" formControlName="password" class="form-control">
