Avanzamos un poco con lo de lucho

--- a/src/app/components/inicio-sesion/inicio-sesion.component.css
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.css
@@ -90,11 +90,17 @@
     .login-form h1 {
         font-size: 20px;
     }
-
+    
     .login-btn {
         padding: 10px;
         font-size: 14px;
     }
+}
+.button-container{
+    display: flex; 
+    gap: 10px; 
+    justify-content: center; 
+    margin-top: 20px; 
 }
 .error{
     color: red;
