--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -30,7 +30,12 @@
                 Acceso rechazado, verifique los datos
             </div>
         }
-        <button type="submit" class="login-btn" (click)="onLogin()">Iniciar Sesión</button>
+        <div class="button-container">
+            <button type="submit" class="login-btn" (click)="onLogin()">Iniciar Sesión</button> 
+            <button (click)="onGoogleSignIn()" class="login-btn">Iniciar sesión con Google</button>
+        </div>
+        
+
         <p class="register-text">¿No tienes cuenta? <a routerLink="register">Regístrate</a></p>
     </form>
 </div>
