--- a/src/app/components/hero-productos/hero-productos.component.css
+++ b/src/app/components/hero-productos/hero-productos.component.css
@@ -1,59 +1,57 @@
 #Productos-hero {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    justify-items: center;
-    padding: 20px;
-    background-color: #f5f5f5;
-  }
-  
-  .div-producto {
-    background-color: #ffffff;
-    border: 1px solid #e0e0e0;
-    border-radius: 8px;
-    padding: 15px;
-    width: 100%;
-    max-width: 200px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: transform 0.3s ease;
-  }
-  
-  .div-producto:hover {
-    transform: scale(1.05);
-  }
-  
-  .nombre-producto {
-    font-size: 1.5em;
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-  .img-producto {
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-    margin-bottom: 15px;
-  }
-  
-  .precio-producto {
-    font-size: 1.2em;
-    color: #555;
-    margin-bottom: 10px;
-  }
-  
-  .boton-producto {
-    padding: 10px 15px;
-    font-size: 1em;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .boton-producto:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  overflow-x: auto; /* Agrega desplazamiento horizontal si hay más de cinco productos */
+}
+
+.div-producto {
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  padding: 15px;
+  width: 200px; /* Ancho fijo para que sólo quepan cinco productos */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.3s ease;
+  flex: 0 0 auto; /* Previene que los productos se reduzcan en tamaño */
+}
+
+.div-producto:hover {
+  transform: scale(1.05);
+}
+
+.nombre-producto {
+  font-size: 1.5em;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.img-producto {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
+.precio-producto {
+  font-size: 1.2em;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.boton-producto {
+  padding: 10px 15px;
+  font-size: 1em;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.boton-producto:hover {
+  background-color: #0056b3;
+}
