google log-in working and everything together

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<router-outlet></router-outlet>
-
+@if(router.url!="/" && router.url!="/login" && router.url!="/register"){
+<div class="container">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
+}
+@else{
+    <router-outlet></router-outlet>
+}
