--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -31,8 +31,8 @@
             </div>
         }
         <div class="button-container">
-            <button type="submit" class="login-btn" (click)="onLogin()">Iniciar Sesión</button> 
-            <button (click)="onGoogleSignIn()" class="login-btn">Iniciar sesión con Google</button>
+            <button type="submit" class="login-btn">Iniciar Sesión</button> 
+            <button type="button" (click)="onGoogleSignIn()" class="login-btn">Iniciar sesión con Google</button>
         </div>
         
 
