--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="home">
     <app-hero-home></app-hero-home>
     <app-navbar-home/>
+    <app-hero-productos> </app-hero-productos>
 </div>
