Se añado la posibilidad de que el usuario realice un BM

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <div class="logo">Home</div>
     <ul class="nav-links">
+        <li><a href="http://localhost:4200/menu"><i class="fas fa-cog"></i> Configuración</a></li>
         <li><a href="#">Home</a></li>
         <li><a href="#">Explora productos y rutinas</a></li>
         <li><a href="#">Sign Up</a></li>
