--- a/src/app/components/inicio-sesion/inicio-sesion.component.css
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.css
@@ -71,16 +71,29 @@
     cursor: pointer;
 }
 
-.register-text a {
+.register-text a{
     color: #000;
     text-decoration: none;
     font-weight: bold;
+    text-decoration: none;
 }
 
 .register-text a:hover {
     text-decoration: underline;
 }
-
+.register-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.go-home-text{
+    text-decoration: none;
+    color: #000;
+}
+.go-home-text:hover{
+    text-decoration: underline;
+}
 @media (max-width: 600px) {
     .login-container {
         padding: 15px;
