--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -35,6 +35,9 @@
             <button type="submit" class="login-btn">Iniciar Sesión</button> 
             <button type="button" (click)="onGoogleSignIn()" class="login-btn">Iniciar sesión con Google</button>
         </div>
-        <p class="register-text">¿No tienes cuenta? <a routerLink="register">Regístrate</a></p>
+        <div class="register-container">
+            <p class="register-text">¿No tienes cuenta? <a routerLink="register">Regístrate</a></p>
+            <a routerLink="/home" class="go-home-text">Continuar sin iniciar sesión</a>
+        </div>
     </form>
 </div>
