--- a/src/app/components/menu-perfil/menu-perfil.component.html
+++ b/src/app/components/menu-perfil/menu-perfil.component.html
@@ -1,38 +1,45 @@
-<div class="profile-container">
-    <div class="header">
-        <span class="close-btn">✕</span>
-        <h1>Profile</h1>
-    </div>
-    
-    @if (usuariosService.usuarioEnSesion) { }
-  
-    <div class="profile-info">
-        <div class="user-info">
-            <h2>{{usuariosService.usuarioEnSesion!.nombre}}</h2>
-            <p>&#64;{{usuariosService.usuarioEnSesion!.username}}</p>
+<div class="container" [ngClass]="{'open': isOpen}">
+    <div class="profile-container" [ngClass]="{'open': isOpen}" [ngClass]="{'open-configuration': isOpenConfiguration}">
+        <div class="header">
+            <span class="close-btn" (click)="toggleMenu()">✕</span>
+            <h1>Profile</h1>
         </div>
-    </div>
-  
-    <div class="options">
-        <div class="option">
-            <div class="icon"><i class="fas fa-user"></i></div>
-            <span>{{usuariosService.usuarioEnSesion!.nombre}} {{usuariosService.usuarioEnSesion!.apellido}}</span>
-        </div>
-        <div class="option">
-            <div class="icon"><i class="fas fa-key"></i></div>
-            <span>*********</span>
-        </div>
-        <div class="option">
-            <div class="icon"><i class="fas fa-phone"></i></div>
-            <span>{{ usuariosService.usuarioEnSesion!.numDeTelefono.toString().slice(0, 3) + '-***-' + usuariosService.usuarioEnSesion!.numDeTelefono.toString().slice(-2) }}</span>
-        </div>
-        <div class="option">
-            <div class="icon"><i class="fas fa-envelope"></i></div>
-            <span>{{ usuariosService.usuarioEnSesion!.email.slice(0, 3) + '...@' + usuariosService.usuarioEnSesion!.email.split('@')[1] }}</span>
-        </div>
-  
-        <a (click)="accesToConfiguration()" class="modify-btn">Modificar usuario</a>
-        <a (click)="accesToDelete()" class="delete-btn">Borrar usuario</a>
-    </div>
-  </div>
-  
+        
+        @if (isLogged) { 
+            <div class="profile-info">
+                <div class="user-info">
+                    <h2>{{usuariosService.usuarioEnSesion!.nombre}}</h2>
+                    <p>&#64;{{usuariosService.usuarioEnSesion!.username}}</p>
+                </div>
+            </div>
+          
+            <div class="options">
+                <div class="option">
+                    <div class="icon"><i class="fas fa-user"></i></div>
+                    <span>{{usuariosService.usuarioEnSesion!.nombre}} {{usuariosService.usuarioEnSesion!.apellido}}</span>
+                </div>
+                <div class="option">
+                    <div class="icon"><i class="fas fa-key"></i></div>
+                    <span>*********</span>
+                </div>
+                <div class="option">
+                    <div class="icon"><i class="fas fa-phone"></i></div>
+                    <span>{{ usuariosService.usuarioEnSesion!.numDeTelefono.toString().slice(0, 3) + '-***-' + usuariosService.usuarioEnSesion!.numDeTelefono.toString().slice(-2) }}</span>
+                </div>
+                <div class="option">
+                    <div class="icon"><i class="fas fa-envelope"></i></div>
+                    <span>{{ usuariosService.usuarioEnSesion!.email.slice(0, 3) + '...@' + usuariosService.usuarioEnSesion!.email.split('@')[1] }}</span>
+                </div>
+          
+                <a (click)="accesToConfiguration()" class="modify-btn">Modificar usuario</a>
+                <a (click)="accesToDelete()" class="delete-btn">Borrar usuario</a>
+            </div>
+        }
+        @else{
+            <div class="profile-info">
+                <h2>No hay usuario en sesión</h2>
+            </div>
+        }
+      </div>    
+      <app-user-configuration [isOpen]="isOpenConfiguration" (toggleMenu)="toggleMenu()"></app-user-configuration>
+</div>
