--- a/src/app/components/user-configuration/user-configuration.component.css
+++ b/src/app/components/user-configuration/user-configuration.component.css
@@ -5,15 +5,40 @@ body {
     height: 100vh;
     background-color: #f7f7f7;
   }
-  
+  .header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .close-btn{
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .header h1{
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+  }
   .configuration-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 300px;
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: none;
   }
   
+  .open{
+    display: block;
+  }
+
   h1 {
     font-size: 24px;
     font-weight: bold;
