agregado del apartado about us

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
         <p>Envíanos un mensaje</p>
     </div>
     <div class="footer-section">
-        <h3><a href="#">Sobre nosotros</a></h3>
+        <h3><a routerLink="/sobre-nosotros">Sobre nosotros</a></h3>
         <p>Conoce más</p>
     </div>
     <div class="footer-section">
