agregado de apartado politicas

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
         <p>Conoce más</p>
     </div>
     <div class="footer-section">
-        <h3><a href="#">Terminos y condiciones</a></h3>
+        <h3><a routerLink="/terminos-y-condiciones">Terminos y condiciones</a></h3>
         <p>Politicas</p>
     </div>
 </footer>
