--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home">
     <app-hero-home></app-hero-home>
     <app-navbar-home></app-navbar-home>
-    <app-hero-productos></app-hero-productos>
     <app-menu-perfil></app-menu-perfil>
+    <app-list-productos></app-list-productos>
 </div>
