se creo la pagina de productos y se muestran, ademas se linkeo con details-productos

--- a/src/app/components/navbar-home/navbar-home.component.html
+++ b/src/app/components/navbar-home/navbar-home.component.html
@@ -1,9 +1,9 @@
 <div>
     <nav class="navbar-home">
         <div>
-            <div><a href="#Products">Products</a></div>
+            <div><a routerLink="/productos">Products</a></div>
             <div><a href="#home">Sign in</a></div>
             <div><a href="#routines">Routines</a></div>
-        </div>  
+        </div>
     </nav>
 </div>
