--- a/src/app/pages/page-productos/page-productos/page-productos.component.html
+++ b/src/app/pages/page-productos/page-productos/page-productos.component.html
@@ -7,7 +7,7 @@
       <img [src]="producto.imagen" class="imagen-producto" alt="imagen">
       <h2>{{ producto.nombre }}</h2>
       <p>${{ producto.precio }}</p>
-      <button routerLink="/detalles" class="btn-ver-detalles">ver detalles</button>
+      <button routerLink="/detalles/{{producto.id}}" class="btn-ver-detalles">ver detalles</button>
     </div>
     }
   </div>
