--- a/src/app/productos-details/productos-details.component.html
+++ b/src/app/productos-details/productos-details.component.html
@@ -1,1 +1,7 @@
-<p>productos-details works!</p>
+<div class="product-container">
+    <h1>{{producto.nombre}}</h1>
+    <img [src]="producto.imagen" alt="imagen">
+    <p>{{producto.descripcion}}</p>
+    <p>{{producto.precio}} USD</p>
+    <button>Comprar</button>
+</div>
