fix history main

--- a/src/app/components/hero-home/hero-home.component.html
+++ b/src/app/components/hero-home/hero-home.component.html
@@ -22,8 +22,8 @@
             <div class="hero-home-search-input">
                 <input type="text" placeholder="find products">
                 <div style="display: flex; flex-direction: row; gap: 10px;">
-                    <button>Sign up</button>
-                    <button>Search</button>
+                    <button>Register</button>
+                    <button>Buscar</button>
                 </div>
             </div>
         </div>
