--- a/src/app/productos-details/productos-details.component.html
+++ b/src/app/productos-details/productos-details.component.html
@@ -1,5 +1,6 @@
+<button routerLink="/productos" class="btn-volver">Volver</button>
 <div class="product-container">
-    <h1>{{producto.nombre}}</h1>
+  <h1>{{producto.nombre}}</h1>
     <img [src]="producto.imagen" alt="imagen">
     <p>{{producto.descripcion}}</p>
     <p>{{producto.precio}} USD</p>
