added product filter, product style changed and new volver button.

--- a/src/app/pages/page-productos/page-productos/page-productos.component.html
+++ b/src/app/pages/page-productos/page-productos/page-productos.component.html
@@ -1,5 +1,5 @@
 <div class="product-general">
-  <h1>Productos</h1>
+  <h1>Productos.</h1>
 
   <select #ordenSelect (change)="ordenarPorPrecio(ordenSelect.value)">
     <option value="">Selecciona una opción</option>
