Se actualizo la API de mercado pago y se consumio correctamente.

--- a/src/app/components/productos-details/productos-details.component.html
+++ b/src/app/components/productos-details/productos-details.component.html
@@ -4,5 +4,5 @@
     <img [src]="producto.imagen" alt="imagen">
     <p>{{producto.descripcion}}</p>
     <p>{{producto.precio}} USD</p>
-    <button>Comprar</button>
+    <button (click)="createPaymentPreference()">Comprar</button>
 </div>
