fix password popup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 @if(router.url!="/" && router.url!="/login" && router.url!="/register"){
 <div class="container">
     <app-header></app-header>
+    <app-menu-perfil></app-menu-perfil>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
