html y css de para ver rutinas

--- a/src/app/components/navbar-home/navbar-home.component.html
+++ b/src/app/components/navbar-home/navbar-home.component.html
@@ -3,7 +3,7 @@
         <div>
             <div><a routerLink="/productos">Products</a></div>
             <div><a href="#home">Sign in</a></div>
-            <div><a href="#routines">Routines</a></div>
+            <div><a routerLink="/rutinas">Routines</a></div>
         </div>
     </nav>
 </div>
