Se añadio la posibilidad de añadir rutinas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,10 @@
         <li><a href="#">Sign Up</a></li>
     </ul>
     <div class="sign-in-btn">
+        @if(verificador)
+        {
+            <button class="add-btn">Agregar</button>
+        }
         <div class="dropdown">
             <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="User" class="user-image">
             <div class="dropdown-content">
