--- a/src/app/components/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/components/inicio-sesion/inicio-sesion.component.html
@@ -36,7 +36,7 @@
             <button type="button" (click)="onGoogleSignIn()" class="login-btn">Iniciar sesión con Google</button>
         </div>
         <div class="register-container">
-            <p class="register-text">¿No tienes cuenta? <a routerLink="register">Regístrate</a></p>
+            <p class="register-text">¿No tienes cuenta? <a #ref="">Regístrate</a></p>
             <a routerLink="/home" class="go-home-text">Continuar sin iniciar sesión</a>
         </div>
     </form>
