--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -38,18 +38,14 @@ body {
 }
 
 .sign-in-btn {
-    padding: 8px 16px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    border: 1px solid #969696;
-    color: #fff;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    cursor:pointer;
+    gap: 10px; /* Añade espacio entre el botón y el dropdown */
+    padding: 0; /* Opcional: ajusta el padding si es necesario */
+    box-shadow: none; /* Opcional: ajusta el estilo de sombra */
+    border: none; /* Opcional: ajusta el borde */
 }
+
 
 .user-image {
     width: 20px;
@@ -91,4 +87,40 @@ body {
 .logo{
     text-decoration: none;
     color: #000;
+}
+.add-btn {
+    background-color: #1a1a1a; /* Fondo negro minimalista */
+    color: #ffffff;
+    font-weight: bold;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+
+.add-btn::before {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.5), transparent);
+    transform: rotate(45deg);
+    transition: all 0.3s ease;
+    opacity: 0;
+}
+
+.add-btn:hover::before {
+    opacity: 1;
+    left: 150%;
+    transition: all 0.5s ease;
+}
+
+.add-btn:hover {
+    transform: scale(1.1);
 }
