Add pop up only for admins to add routines and products

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="container">
     <app-header></app-header>
     <app-menu-perfil></app-menu-perfil>
+    <app-pop-up-add></app-pop-up-add>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
