--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,6 +1,7 @@
-<body><div class="sobre-nosotros">
-  <a routerLink="/home" class="flecha-atras">←</a>
-  <h2>Sobre Nosotros</h2>
+<div class="container">
+  <div class="sobre-nosotros">
+    <a routerLink="/home" class="flecha-atras">←</a>
+    <h2>Sobre Nosotros</h2>
 
   <div class="perfil">
     <img src="foto-perfil.jpg" alt="Rominita marangoni" class="imagen-perfil">
@@ -34,4 +35,4 @@
   </div>
 
 </div>
-</body>
+</div>
