--- a/src/app/components/navbar-home/navbar-home.component.html
+++ b/src/app/components/navbar-home/navbar-home.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar-home">
         <div>
             <div><a routerLink="/productos">Products</a></div>
-            <div><a href="#home">Sign in</a></div>
+            <div><a routerLink="/login">Sign in</a></div>
             <div><a routerLink="/rutinas">Routines</a></div>
         </div>
     </nav>
