--- a/src/app/components/politicas/politicas.component.html
+++ b/src/app/components/politicas/politicas.component.html
@@ -1,5 +1,4 @@
-<body>
-
+<div class="container">
   <div class="contenedor">
     <a routerLink="/home" class="volver">←</a>
     <h1>Términos y Condiciones</h1>
@@ -43,6 +42,6 @@
       <h2>8. Ley Aplicable</h2>
       <p>Estos Términos y Condiciones se regirán e interpretarán de acuerdo con las leyes del país en el que operamos. Cualquier disputa que surja en relación con estos términos estará sujeta a la jurisdicción de los tribunales competentes.</p>
     </section>
-  </div>
 
-</body>
+</div>
+</div>
