--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -1,9 +1,11 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f9fafc;
+.container{
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding: 20px;
+  align-items: center;
 }
 
 .sobre-nosotros {
@@ -13,10 +15,6 @@ body {
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
 }
 
 .flecha-atras {
