--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -69,7 +69,7 @@ body {
     z-index: 1;
 }
 
-.dropdown:hover .dropdown-content {
+.show {
     display: block;
 }
 
@@ -89,38 +89,18 @@ body {
     color: #000;
 }
 .add-btn {
-    background-color: #1a1a1a; /* Fondo negro minimalista */
-    color: #ffffff;
+    color: #000000;
     font-weight: bold;
-    border: none;
+    border: 1px solid black;
     border-radius: 50px;
-    padding: 10px 20px;
-    font-size: 18px;
+    padding: 5px 10px;
+    font-size: 10px;
     cursor: pointer;
     position: relative;
     overflow: hidden;
     transition: transform 0.3s ease;
 }
 
-.add-btn::before {
-    content: "";
-    position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-    background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.5), transparent);
-    transform: rotate(45deg);
-    transition: all 0.3s ease;
-    opacity: 0;
-}
-
-.add-btn:hover::before {
-    opacity: 1;
-    left: 150%;
-    transition: all 0.5s ease;
-}
-
 .add-btn:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
