--- a/src/app/components/list-productos/list-productos.component.css
+++ b/src/app/components/list-productos/list-productos.component.css
@@ -12,6 +12,11 @@
     padding: 15px;
     border-radius: 8px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
   }
   
   .imagen-producto {
