--- a/src/app/components/politicas/politicas.component.css
+++ b/src/app/components/politicas/politicas.component.css
@@ -1,17 +1,11 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
-
-body {
+.container{
+  margin-top: 100px;
+  margin-bottom: 100px;
+  width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #f4f4f9;
-  min-height: 100vh;
-  padding: 20px;
 }
 
 .contenedor {
